[gd_scene load_steps=12 format=3 uid="uid://cim50jb658udj"]

[ext_resource type="Script" path="res://Apps/radio.gd" id="1_c8rqr"]
[ext_resource type="Texture2D" uid="uid://ci0pvyvcloe7h" path="res://Assets/Apps/Radio/wireless.png" id="1_k0qi5"]
[ext_resource type="Texture2D" uid="uid://8ddh8tcb7fs4" path="res://Assets/Apps/Radio/radio.png" id="2_gu740"]
[ext_resource type="AudioStream" uid="uid://cri2a100of34l" path="res://Assets/Audio/Sounds/radio.ogg" id="3_lt3m3"]
[ext_resource type="Theme" uid="uid://dihe8ewfxt15y" path="res://Resources/default_rwk_theme.tres" id="4_bwco0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvsuc"]
size = Vector2(20, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5ib3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k0qi5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrao0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_w3lfj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ov54v"]
resource_name = "show"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_68pph"]
_data = {
"RESET": SubResource("Animation_w3lfj"),
"show": SubResource("Animation_ov54v")
}

[node name="Radio" type="Area2D"]
position = Vector2(620, 330)
collision_mask = 2
script = ExtResource("1_c8rqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_pvsuc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_p5ib3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gu740")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -140.0
offset_right = 130.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("4_bwco0")
theme_override_styles/panel = SubResource("StyleBoxFlat_wrao0")

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.784314, 1, 1)
theme_override_constants/outline_size = 3
text = "sample text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "show"
speed_scale = 5.0
libraries = {
"": SubResource("AnimationLibrary_68pph")
}

[node name="RadioSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lt3m3")
volume_db = -20.0
bus = &"Sounds"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
